--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,10 +22,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Lint
-      run: |
-        npm install
-        npm run lint --fix
+#    - name: Lint
+#      run: |
+#        npm install
+#        npm run lint --fix
     
     - name: Build
       run: |
